--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,6 @@ section{
 .intro{
   text-align: center;
 }
-.intro h2{
-}
 .intro p {
   line-height: 1.7;
   color:#39a6b2;
@@ -96,8 +94,6 @@ section{
 .steps {
   text-align: center;
   background:#fce138;
-}
-.steps h2 {
 }
 .steps div {
   margin-bottom: 80px;
@@ -169,6 +165,39 @@ section{
 }
 .secondary-border{
   border-color: #39a6b2;
+}
+.contact {
+  text-align: center;
+  background:#024e76;
+}
+.contact h2{
+  color:#fce138;
+}
+.contact-info iframe{
+  width:400px;
+  height: 400px;  
+}
+.contact-info div{
+  width: 410px;
+  display:inline-block;
+  vertical-align: top;
+  text-align: left;
+  margin: 30px 0 0 60px;
+  color: white;
+}
+.contact-info h3 {
+  color: #fce138;
+  font-size: 32px;
+}
+.contact-info p, 
+.contact-info address{
+  margin: 20px 0;
+  line-height: 1.5;
+  font-size: 20px;
+  font-style: normal;
+}
+.contact-info a {
+  color:#fce138;
 }
 footer {
   background:#fce138;
