--- a/assets/css/secondary-styles.css
+++ b/assets/css/secondary-styles.css
@@ -35,7 +35,7 @@
   .secondary-content ul {
     margin: 15px 20px;
   }
-  
+  g
   .secondary-content li {
     color: #39a6b2;
     margin: 10px 0;
