--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,12 +13,21 @@ header {
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position:-webkit-sticky;
+    position:sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-position: 80%;
 }
 header h1 {
     font-weight: bold;
     font-size: 36px;
     color: #fce138;
     margin: 0;
+    text-shadow: 0 0 10px rgba;
 }
 header a {
   text-decoration: none;
@@ -38,6 +47,13 @@ header nav ul li a {
   padding: 10px 15px;
   font-weight: lighter;
   font-size: 1.55vw;
+  text-shadow: 0 0 10px rgba;
+}
+header nav ul li a:hover {
+  background:#fce138;
+  color:#024e76;
+  border-radius: 15px;
+  text-shadow: none;
 }
 section{
   padding: 60px;
@@ -50,6 +66,8 @@ section{
   justify-content: center;
   flex-wrap: wrap;
   align-items: flex-start;
+  background-attachment: fixed;
+  background-attachment: 80%;
 }
 .hero-cta {
   width: 35%;
@@ -63,14 +81,17 @@ section{
   font-style: italic;
   font-size: 55px;
   color:#fce138;
+  text-shadow: 0 0 10px rgba;
 }
 .hero-form{
-  background-color:#fce138;
+  background-color: rgb(252,225,56);
   padding: 20px;
   color: #024e76;
   border: solid 3px #024e76;
   width: 40%;
   margin: 3.5%;
+  box-shadow: 0 0 10px rgba;
+  border-radius: 15px;
 }
 .hero-form h3{
   font-size: 24px;
@@ -88,6 +109,10 @@ section{
   border: none;
   padding: 10px 20px;
   font-size: 16px;
+  border-radius: 10px;
+}
+.hero-form button:hover {
+  background-color: #39a6b2;
 }
 .form-input{
   border: 1px solid #024e76;
@@ -97,6 +122,12 @@ section{
   color: #024e76;
   width: 100%;
   margin-bottom: 15px;
+  border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);
+}
+.form-input:focus {
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 .intro p {
   line-height: 1.7;
@@ -113,11 +144,14 @@ section{
   margin:50px auot;
   padding-bottom: 50px;
   width:80%;
-  border-bottom: 1px solid #39a6b2;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid #39a6b2;
+}
+.step:last-child{
+  border-bottom: none;
 }
 .step h3 {
   color: #024e76;
@@ -245,6 +279,12 @@ section{
   width: 100%;
   margin-bottom: 15px;
   margin-top: 5px;
+  border-radius: 10px;
+  background-color: rgba(255,255,255, 0.75);
+}
+.contact-form input, .contact-form textarea:focus{
+  background-color: rgba(255,255,255, 1);
+  outline: none;
 }
 .contact-form button {
   width: 100%;
@@ -253,7 +293,12 @@ section{
   color:#024e76;
   text-align: center;
   padding: 15px 0;
-  font-size: 16px
+  font-size: 16px;
+  border-radius: 10px;
+}
+.contact-form button:hover {
+  color:#fce138;
+  background:#39a6b2;
 }
 .contact-info a {
   color:#fce138;
@@ -283,6 +328,7 @@ footer a {
   header {
     padding-bottom: 0;
     justify-content: center;
+    position: relative;
   }
 
   header h1 {
